--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,56 +1,56 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ceadd4">  <td>23/06/20 14:41:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase2.createAcct()[pri:0, instance:automationExercise.testCases.TestCase2@483f6d77]">&gt;&gt;createAcct</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@2046152817</td>   <td></td> </tr>
-<tr bgcolor="ceadd4">  <td>23/06/20 14:42:00</td>   <td>16299</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase2.createAcct()[pri:0, instance:automationExercise.testCases.TestCase2@5d7148e2]">&gt;&gt;createAcct</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@765761083</td>   <td></td> </tr>
-<tr bgcolor="bc8d9f">  <td>23/06/20 14:43:35</td>   <td>110985</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase5.initialSetup(java.lang.String)[pri:0, instance:automationExercise.testCases.TestCase5@28f3b248]">&gt;&gt;initialSetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@2046152817</td>   <td></td> </tr>
-<tr bgcolor="b2dba3">  <td>23/06/20 14:42:55</td>   <td>71480</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase4.initialSetup(java.lang.String)[pri:0, instance:automationExercise.testCases.TestCase4@63a12c68]">&gt;&gt;initialSetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@2046152817</td>   <td></td> </tr>
-<tr bgcolor="8c8dcf">  <td>23/06/20 14:40:44</td>   <td>-59691</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase1.initialSetup(java.lang.String)[pri:0, instance:automationExercise.testCases.TestCase1@6f46426d]">&gt;&gt;initialSetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@2046152817</td>   <td></td> </tr>
-<tr bgcolor="8385ad">  <td>23/06/20 14:44:46</td>   <td>181681</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase6.initialSetup(java.lang.String)[pri:0, instance:automationExercise.testCases.TestCase6@1b1426f4]">&gt;&gt;initialSetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@2046152817</td>   <td></td> </tr>
-<tr bgcolor="ceadd4">  <td>23/06/20 14:41:37</td>   <td>-7162</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase2.initialSetup(java.lang.String)[pri:0, instance:automationExercise.testCases.TestCase2@483f6d77]">&gt;&gt;initialSetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@2046152817</td>   <td></td> </tr>
-<tr bgcolor="aed86c">  <td>23/06/20 14:42:36</td>   <td>52517</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase3.initialSetup(java.lang.String)[pri:0, instance:automationExercise.testCases.TestCase3@7e5afaa6]">&gt;&gt;initialSetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@2046152817</td>   <td></td> </tr>
-<tr bgcolor="bc8d9f">  <td>23/06/20 14:44:13</td>   <td>149460</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase5.initialSetup(java.lang.String)[pri:0, instance:automationExercise.testCases.TestCase5@2c35e847]">&gt;&gt;initialSetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@765761083</td>   <td></td> </tr>
-<tr bgcolor="aed86c">  <td>23/06/20 14:43:09</td>   <td>84716</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase3.initialSetup(java.lang.String)[pri:0, instance:automationExercise.testCases.TestCase3@25fb8912]">&gt;&gt;initialSetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@765761083</td>   <td></td> </tr>
-<tr bgcolor="8c8dcf">  <td>23/06/20 14:40:44</td>   <td>-59691</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase1.initialSetup(java.lang.String)[pri:0, instance:automationExercise.testCases.TestCase1@543588e6]">&gt;&gt;initialSetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@765761083</td>   <td></td> </tr>
-<tr bgcolor="8385ad">  <td>23/06/20 14:45:28</td>   <td>224430</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase6.initialSetup(java.lang.String)[pri:0, instance:automationExercise.testCases.TestCase6@7bd4937b]">&gt;&gt;initialSetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@765761083</td>   <td></td> </tr>
-<tr bgcolor="b2dba3">  <td>23/06/20 14:43:26</td>   <td>101784</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase4.initialSetup(java.lang.String)[pri:0, instance:automationExercise.testCases.TestCase4@7c24b813]">&gt;&gt;initialSetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@765761083</td>   <td></td> </tr>
-<tr bgcolor="ceadd4">  <td>23/06/20 14:41:47</td>   <td>2663</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase2.initialSetup(java.lang.String)[pri:0, instance:automationExercise.testCases.TestCase2@5d7148e2]">&gt;&gt;initialSetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@765761083</td>   <td></td> </tr>
-<tr bgcolor="8c8dcf">  <td>23/06/20 14:41:00</td>   <td>-44288</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.scenarioTc1()[pri:0, instance:automationExercise.testCases.TestCase1@6f46426d]">scenarioTc1</td> 
-  <td>TestNG-tests-1@2046152817</td>   <td></td> </tr>
-<tr bgcolor="8c8dcf">  <td>23/06/20 14:41:00</td>   <td>-43521</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.scenarioTc1()[pri:0, instance:automationExercise.testCases.TestCase1@543588e6]">scenarioTc1</td> 
-  <td>TestNG-tests-2@765761083</td>   <td></td> </tr>
-<tr bgcolor="ceadd4">  <td>23/06/20 14:42:06</td>   <td>21678</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase2.scenarioTc2()[pri:0, instance:automationExercise.testCases.TestCase2@483f6d77]">scenarioTc2</td> 
-  <td>TestNG-tests-1@2046152817</td>   <td></td> </tr>
-<tr bgcolor="ceadd4">  <td>23/06/20 14:42:37</td>   <td>52756</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase2.scenarioTc2()[pri:0, instance:automationExercise.testCases.TestCase2@5d7148e2]">scenarioTc2</td> 
-  <td>TestNG-tests-2@765761083</td>   <td></td> </tr>
-<tr bgcolor="aed86c">  <td>23/06/20 14:42:45</td>   <td>61419</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase3.scenarioTc3()[pri:0, instance:automationExercise.testCases.TestCase3@7e5afaa6]">scenarioTc3</td> 
-  <td>TestNG-tests-1@2046152817</td>   <td></td> </tr>
-<tr bgcolor="b2dba3">  <td>23/06/20 14:43:01</td>   <td>77407</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase4.scenarioTc3()[pri:0, instance:automationExercise.testCases.TestCase4@63a12c68]">scenarioTc3</td> 
-  <td>TestNG-tests-1@2046152817</td>   <td></td> </tr>
-<tr bgcolor="aed86c">  <td>23/06/20 14:43:19</td>   <td>95120</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase3.scenarioTc3()[pri:0, instance:automationExercise.testCases.TestCase3@25fb8912]">scenarioTc3</td> 
-  <td>TestNG-tests-2@765761083</td>   <td></td> </tr>
-<tr bgcolor="b2dba3">  <td>23/06/20 14:43:41</td>   <td>117025</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase4.scenarioTc3()[pri:0, instance:automationExercise.testCases.TestCase4@7c24b813]">scenarioTc3</td> 
-  <td>TestNG-tests-2@765761083</td>   <td></td> </tr>
-<tr bgcolor="bc8d9f">  <td>23/06/20 14:43:44</td>   <td>120028</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase5.scenarioTc5()[pri:0, instance:automationExercise.testCases.TestCase5@28f3b248]">scenarioTc5</td> 
-  <td>TestNG-tests-1@2046152817</td>   <td></td> </tr>
-<tr bgcolor="bc8d9f">  <td>23/06/20 14:44:22</td>   <td>158078</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase5.scenarioTc5()[pri:0, instance:automationExercise.testCases.TestCase5@2c35e847]">scenarioTc5</td> 
-  <td>TestNG-tests-2@765761083</td>   <td></td> </tr>
-<tr bgcolor="8385ad">  <td>23/06/20 14:44:55</td>   <td>191417</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase6.scenarioTc6()[pri:0, instance:automationExercise.testCases.TestCase6@1b1426f4]">scenarioTc6</td> 
-  <td>TestNG-tests-1@2046152817</td>   <td></td> </tr>
-<tr bgcolor="8385ad">  <td>23/06/20 14:45:44</td>   <td>239815</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase6.scenarioTc6()[pri:0, instance:automationExercise.testCases.TestCase6@7bd4937b]">scenarioTc6</td> 
-  <td>TestNG-tests-2@765761083</td>   <td></td> </tr>
+<tr bgcolor="a59da3">  <td>23/06/26 03:18:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase2.createAcct()[pri:0, instance:automationExercise.testCases.TestCase2@609db546]">&gt;&gt;createAcct</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1109130686</td>   <td></td> </tr>
+<tr bgcolor="a59da3">  <td>23/06/26 03:18:33</td>   <td>27901</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase2.createAcct()[pri:0, instance:automationExercise.testCases.TestCase2@3688eb5b]">&gt;&gt;createAcct</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@913725745</td>   <td></td> </tr>
+<tr bgcolor="9caaeb">  <td>23/06/26 03:17:16</td>   <td>-48832</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase1.initialSetup(java.lang.String)[pri:0, instance:automationExercise.testCases.TestCase1@600b9d27]">&gt;&gt;initialSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@913725745</td>   <td></td> </tr>
+<tr bgcolor="9caaeb">  <td>23/06/26 03:17:16</td>   <td>-48832</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase1.initialSetup(java.lang.String)[pri:0, instance:automationExercise.testCases.TestCase1@5b67bb7e]">&gt;&gt;initialSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1109130686</td>   <td></td> </tr>
+<tr bgcolor="a59da3">  <td>23/06/26 03:17:58</td>   <td>-6423</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase2.initialSetup(java.lang.String)[pri:0, instance:automationExercise.testCases.TestCase2@609db546]">&gt;&gt;initialSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1109130686</td>   <td></td> </tr>
+<tr bgcolor="a59da3">  <td>23/06/26 03:18:23</td>   <td>18601</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase2.initialSetup(java.lang.String)[pri:0, instance:automationExercise.testCases.TestCase2@3688eb5b]">&gt;&gt;initialSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@913725745</td>   <td></td> </tr>
+<tr bgcolor="e47893">  <td>23/06/26 03:19:00</td>   <td>55738</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase3.initialSetup(java.lang.String)[pri:0, instance:automationExercise.testCases.TestCase3@20f5281c]">&gt;&gt;initialSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1109130686</td>   <td></td> </tr>
+<tr bgcolor="67a5d6">  <td>23/06/26 03:19:13</td>   <td>68615</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase4.initialSetup(java.lang.String)[pri:0, instance:automationExercise.testCases.TestCase4@56c4278e]">&gt;&gt;initialSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1109130686</td>   <td></td> </tr>
+<tr bgcolor="e47893">  <td>23/06/26 03:19:15</td>   <td>70079</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase3.initialSetup(java.lang.String)[pri:0, instance:automationExercise.testCases.TestCase3@69f1a286]">&gt;&gt;initialSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@913725745</td>   <td></td> </tr>
+<tr bgcolor="67a5d6">  <td>23/06/26 03:19:27</td>   <td>82544</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase4.initialSetup(java.lang.String)[pri:0, instance:automationExercise.testCases.TestCase4@7922d892]">&gt;&gt;initialSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@913725745</td>   <td></td> </tr>
+<tr bgcolor="b08cbd">  <td>23/06/26 03:19:43</td>   <td>98759</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase5.initialSetup(java.lang.String)[pri:0, instance:automationExercise.testCases.TestCase5@301eda63]">&gt;&gt;initialSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1109130686</td>   <td></td> </tr>
+<tr bgcolor="b08cbd">  <td>23/06/26 03:19:57</td>   <td>112315</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase5.initialSetup(java.lang.String)[pri:0, instance:automationExercise.testCases.TestCase5@457c9034]">&gt;&gt;initialSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@913725745</td>   <td></td> </tr>
+<tr bgcolor="70a591">  <td>23/06/26 03:20:36</td>   <td>151643</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase6.initialSetup(java.lang.String)[pri:0, instance:automationExercise.testCases.TestCase6@3d246ea3]">&gt;&gt;initialSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1109130686</td>   <td></td> </tr>
+<tr bgcolor="70a591">  <td>23/06/26 03:21:00</td>   <td>175456</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase6.initialSetup(java.lang.String)[pri:0, instance:automationExercise.testCases.TestCase6@345f69f3]">&gt;&gt;initialSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@913725745</td>   <td></td> </tr>
+<tr bgcolor="9caaeb">  <td>23/06/26 03:17:24</td>   <td>-40508</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.scenarioTc1()[pri:0, instance:automationExercise.testCases.TestCase1@5b67bb7e]">scenarioTc1</td> 
+  <td>TestNG-tests-1@1109130686</td>   <td></td> </tr>
+<tr bgcolor="9caaeb">  <td>23/06/26 03:17:26</td>   <td>-38473</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.scenarioTc1()[pri:0, instance:automationExercise.testCases.TestCase1@600b9d27]">scenarioTc1</td> 
+  <td>TestNG-tests-2@913725745</td>   <td></td> </tr>
+<tr bgcolor="a59da3">  <td>23/06/26 03:18:35</td>   <td>30577</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase2.scenarioTc2()[pri:0, instance:automationExercise.testCases.TestCase2@609db546]">scenarioTc2</td> 
+  <td>TestNG-tests-1@1109130686</td>   <td></td> </tr>
+<tr bgcolor="a59da3">  <td>23/06/26 03:18:56</td>   <td>51402</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase2.scenarioTc2()[pri:0, instance:automationExercise.testCases.TestCase2@3688eb5b]">scenarioTc2</td> 
+  <td>TestNG-tests-2@913725745</td>   <td></td> </tr>
+<tr bgcolor="e47893">  <td>23/06/26 03:19:08</td>   <td>63022</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase3.scenarioTc3()[pri:0, instance:automationExercise.testCases.TestCase3@20f5281c]">scenarioTc3</td> 
+  <td>TestNG-tests-1@1109130686</td>   <td></td> </tr>
+<tr bgcolor="e47893">  <td>23/06/26 03:19:22</td>   <td>77236</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase3.scenarioTc3()[pri:0, instance:automationExercise.testCases.TestCase3@69f1a286]">scenarioTc3</td> 
+  <td>TestNG-tests-2@913725745</td>   <td></td> </tr>
+<tr bgcolor="67a5d6">  <td>23/06/26 03:19:20</td>   <td>75420</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase4.scenarioTc4()[pri:0, instance:automationExercise.testCases.TestCase4@56c4278e]">scenarioTc4</td> 
+  <td>TestNG-tests-1@1109130686</td>   <td></td> </tr>
+<tr bgcolor="67a5d6">  <td>23/06/26 03:19:35</td>   <td>90789</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase4.scenarioTc4()[pri:0, instance:automationExercise.testCases.TestCase4@7922d892]">scenarioTc4</td> 
+  <td>TestNG-tests-2@913725745</td>   <td></td> </tr>
+<tr bgcolor="b08cbd">  <td>23/06/26 03:19:51</td>   <td>106182</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase5.scenarioTc5()[pri:0, instance:automationExercise.testCases.TestCase5@301eda63]">scenarioTc5</td> 
+  <td>TestNG-tests-1@1109130686</td>   <td></td> </tr>
+<tr bgcolor="b08cbd">  <td>23/06/26 03:20:12</td>   <td>127525</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase5.scenarioTc5()[pri:0, instance:automationExercise.testCases.TestCase5@457c9034]">scenarioTc5</td> 
+  <td>TestNG-tests-2@913725745</td>   <td></td> </tr>
+<tr bgcolor="70a591">  <td>23/06/26 03:20:49</td>   <td>164139</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase6.scenarioTc6()[pri:0, instance:automationExercise.testCases.TestCase6@3d246ea3]">scenarioTc6</td> 
+  <td>TestNG-tests-1@1109130686</td>   <td></td> </tr>
+<tr bgcolor="70a591">  <td>23/06/26 03:21:08</td>   <td>183083</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase6.scenarioTc6()[pri:0, instance:automationExercise.testCases.TestCase6@345f69f3]">scenarioTc6</td> 
+  <td>TestNG-tests-2@913725745</td>   <td></td> </tr>
 </table>
